# semantic.com

./: cabal.project  cabal.project.ci
semantic-python/src/Language/Python/: ScopeGraph.hs
semantic-python/test-stack-graph/: StackTest.hs
semantic-scope-graph/: semantic-scope-graph.cabal
semantic-scope-graph/src/Control/Carrier/: StackGraph.hs
semantic-scope-graph/src/Control/Carrier/Sketch/: ScopeGraph.hs
semantic-scope-graph/src/Control/Effect/: StackGraph.hs
semantic-scope-graph/src/Data/: BaseError.hs
semantic-scope-graph/src/Scope/Graph/: AdjacencyList.hs
semantic-scope-graph/src/Stack/: Graph.hs
