cabal-version:       2.4

name:                semantic-scope-graph
version:             0.0.0.0
synopsis:            Scope Graph computation
description:         Scope Graph computation for ASTs derived from tree-sitter grammars.
homepage:            https://github.com/github/semantic/tree/master/semantic-scope-graph#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.5

library
  exposed-modules:
    Control.Carrier.Sketch.ScopeGraph
    Control.Effect.StackGraph
    Control.Effect.StackGraph.Properties.Declaration
    Control.Effect.StackGraph.Properties.Function
    Control.Effect.StackGraph.Properties.Reference
    Data.Functor.Tagged
    Scope.Graph.AdjacencyList
    Scope.Graph.Convert
    Scope.Info
    Scope.Path
    Scope.Reference
    Scope.Scope
    Scope.Types
    Stack.Path
    Stack.Graph
    Stack.Graph.Export
    Data.BaseError
    Data.Hole
    Data.Module
    Data.ScopeGraph
  build-depends:
      base                    >= 4.13 && < 5
    , aeson
    , algebraic-graphs        >= 0.3 && < 0.5
    , comonad
    , comonad
    , containers
    , fused-effects           ^>= 1.0
    , fused-effects-resumable ^>= 0.1
    , generic-lens
    , generic-monoid
    , hashable
    , lens
    , monoid-subclasses
    , pathtype
    , process
    , semantic-analysis
    , semantic-source         ^>= 0.1.0
    , semilattices
    , streaming
    , streaming-bytestring
    , streaming-process
    , temporary
    , text                    ^>= 1.2.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
